# claude-code-history-image-cleaner

./: CLAUDE.md  LICENSE  README.md  claude-code-history-image-cleaner.py  install.sh  pyproject.toml
src/claude_code_history_image_cleaner/: __init__.py  main.py
